tests/regression/error/hw5_error06.nex
  fun f()
  {
   var f;
   f();
  }
   f();
